tests/scripts/errors/lex/unterminated_bt_string.cdo
VAR s = `template ${1 + 2} never closes
print(s);
